fix: correct verb tense from present to past

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <p class="lead mb-0">
             I'm a software engineer based in Austin, Texas. I like to solve problems and
-            make life better. 
+            make life better.
           </p>
         </div>
       </section>
@@ -156,7 +156,7 @@
               <div class="subheading mb-3">Texas State University, San Marcos, TX</div>
               <ul>
                 <li>
-                  Lead study sessions that reinforced CS fundamentals for students in
+                  Led study sessions that reinforced CS fundamentals for students in
                   statistically difficult CS courses.
                 </li>
                 <li>
