--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2 class="mb-5">Experience</h2>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-              <h3 class="mb-0">System Software Engineering Associate</h3>
+              <h3 class="mb-0">Engineering Scientist</h3>
               <div class="subheading mb-3">
                 Applied Research Laboratories, Austin, TX
               </div>
